name:                gomoku
version:             TODO
homepage:            https://github.com/lzhfromustc/cse230
license:             TODO
license-file:        TODO
author:              Nitya Davarapalli, Ziheng Liu
maintainer:          ndavarapalli@ucsd.edu, zil060@ucsd.edu
copyright:           TODO
category:            TODO
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gomoku
  hs-source-dirs:      src
  other-modules:       Gomoku
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , transformers
                     , vty
