-- name:                gomoku
-- version:             TODO
-- homepage:            https://github.com/lzhfromustc/cse230
-- license:             TODO
-- license-file:        TODO
-- author:              Nitya Davarapalli, Ziheng Liu
-- maintainer:          ndavarapalli@ucsd.edu, zil060@ucsd.edu
-- copyright:           TODO
-- category:            TODO
-- build-type:          Simple
-- cabal-version:       >=1.10
-- extra-source-files:  README.md

-- executable gomoku
--   hs-source-dirs:      src
--   other-modules:       Gomoku
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
--   build-depends:       base         >= 4.7 && < 5
--                      , brick
--                      , containers
--                      , extra
--                      , linear
--                      , lens
--                      , transformers
--                      , vty

name:                gomoku
version:             0.1.0.0
synopsis:            Command-line gomoku game
homepage:            https://github.com/lzhfromustc/cse230
license:             MIT
license-file:        LICENSE
author:              Nitya Davarapalli, Ziheng Liu
maintainer:          ndavarapalli@ucsd.edu, zil060@ucsd.edu
copyright:           2021
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gomoku
  hs-source-dirs:      src
  other-modules:       Game
                     , UI
                     , FileIO
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fforce-recomp
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , directory
                     , microlens
                     , split
                     , vty
                     , hspec

test-suite tests
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , game
                     , random
                     , hspec
                     
